// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`slider [snapshot] > default 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-range"
    data-orientation="horizontal"
    id="base-ui-_r_4s_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 50%; inset-inline-start: 0px; width: var(--start-position);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_4t_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 50%;"
        >
          <input
            aria-label="Volume"
            aria-orientation="horizontal"
            aria-valuenow="50"
            id="base-ui-_r_4v_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="50"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`slider [snapshot] > disabled 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-range"
    data-disabled=""
    data-orientation="horizontal"
    id="base-ui-_r_5g_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-disabled=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-disabled=""
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-disabled=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 50%; inset-inline-start: 0px; width: var(--start-position);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-disabled=""
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_5h_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 50%;"
        >
          <input
            aria-label="Volume"
            aria-orientation="horizontal"
            aria-valuenow="50"
            disabled=""
            id="base-ui-_r_5j_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="50"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`slider [snapshot] > variant: default 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <label
    class="vesper-typography vesper-typography-label-sm vesper-form-input-wrapper-label"
    for="base-ui-_r_62_"
  >
    Label text
  </label>
  <div
    aria-describedby="_r_5u_"
    aria-label="Label text"
    class="vesper-range"
    data-orientation="horizontal"
    id="base-ui-_r_5v_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 50%; inset-inline-start: 0px; width: var(--start-position);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_60_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 50%;"
        >
          <input
            aria-label="Volume"
            aria-orientation="horizontal"
            aria-valuenow="50"
            id="base-ui-_r_62_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="50"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="true"
    id="_r_5u_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M18.1582 3L21 5.8418V18.1582L18.1582 21H5.8418L3 18.1582V5.8418L5.8418 3H18.1582ZM11.4941 9.97461L10.9873 10.4814V16.5566L11.4941 17.0625H12.5059L13.0127 16.5566V10.4814L12.5059 9.97461H11.4941ZM11.4941 6.9375L10.9873 7.44336V8.45605L11.4941 8.96289H12.5059L13.0127 8.45605V7.44336L12.5059 6.9375H11.4941Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`slider [snapshot] > variant: error 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <label
    class="vesper-typography vesper-typography-label-sm vesper-form-input-wrapper-label"
    for="base-ui-_r_6c_"
  >
    Label text
  </label>
  <div
    aria-describedby="_r_68_"
    aria-label="Label text"
    class="vesper-range"
    data-orientation="horizontal"
    id="base-ui-_r_69_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 50%; inset-inline-start: 0px; width: var(--start-position);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_6a_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 50%;"
        >
          <input
            aria-label="Volume"
            aria-orientation="horizontal"
            aria-valuenow="50"
            id="base-ui-_r_6c_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="50"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-error"
    data-message="true"
    id="_r_68_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M21 8V16L16 21H8L3 16V8L8 3H16L21 8ZM11.4932 15.2422L10.9766 15.7578V16.7881L11.4932 17.3027H12.5264L13.042 16.7881V15.7578L12.5264 15.2422H11.4932ZM11.2354 7L10.7188 7.51562L11.2354 13.6973L11.751 14.2119H12.2676L12.7842 13.6973L13.3008 7.51562L12.7842 7H11.2354Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`slider [snapshot] > variant: success 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <label
    class="vesper-typography vesper-typography-label-sm vesper-form-input-wrapper-label"
    for="base-ui-_r_6h_"
  >
    Label text
  </label>
  <div
    aria-describedby="_r_6d_"
    aria-label="Label text"
    class="vesper-range"
    data-orientation="horizontal"
    id="base-ui-_r_6e_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 50%; inset-inline-start: 0px; width: var(--start-position);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_6f_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 50%;"
        >
          <input
            aria-label="Volume"
            aria-orientation="horizontal"
            aria-valuenow="50"
            id="base-ui-_r_6h_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="50"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-success"
    data-message="true"
    id="_r_6d_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM16.2402 8.2959L9.79102 14.4355H9.7793L7.75977 12.5127L7.58691 12.3486L7.41504 12.5127L6.82715 13.0713L6.6377 13.252L6.82715 13.4336L9.16406 15.6572L9.23633 15.7266H10.334L10.4062 15.6572L17.1729 9.2168L17.3623 9.03516L17.1729 8.85449L16.585 8.2959L16.4131 8.13184L16.2402 8.2959Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`slider [snapshot] > variant: warning 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <label
    class="vesper-typography vesper-typography-label-sm vesper-form-input-wrapper-label"
    for="base-ui-_r_67_"
  >
    Label text
  </label>
  <div
    aria-describedby="_r_63_"
    aria-label="Label text"
    class="vesper-range"
    data-orientation="horizontal"
    id="base-ui-_r_64_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 50%; inset-inline-start: 0px; width: var(--start-position);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_65_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 50%;"
        >
          <input
            aria-label="Volume"
            aria-orientation="horizontal"
            aria-valuenow="50"
            id="base-ui-_r_67_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="50"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-warning"
    data-message="true"
    id="_r_63_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M22 18.5537L20.876 20.5H3.10352L2 18.5898L10.9658 3.5H13.0557L22 18.5537ZM11.4932 16.2422L10.9766 16.7578V17.7881L11.4932 18.3027H12.5264L13.042 17.7881V16.7578L12.5264 16.2422H11.4932ZM11.2354 8L10.7188 8.51562L11.2354 14.6973L11.751 15.2119H12.2676L12.7842 14.6973L13.3008 8.51562L12.7842 8H11.2354Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`slider [snapshot] > with custom min/max/step 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-range"
    data-orientation="horizontal"
    id="base-ui-_r_51_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 40.386473429951685%; inset-inline-start: 0px; width: var(--start-position);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_52_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 40.386473429951685%;"
        >
          <input
            aria-label="Volume"
            aria-orientation="horizontal"
            aria-valuenow="4"
            id="base-ui-_r_54_"
            max="10"
            min="0"
            step="2"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="4"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`slider [snapshot] > with label 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <label
    class="vesper-typography vesper-typography-label-sm vesper-form-input-wrapper-label"
    for="base-ui-_r_5o_"
  >
    Label text
  </label>
  <div
    aria-label="Label text"
    class="vesper-range"
    data-orientation="horizontal"
    id="base-ui-_r_5l_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 50%; inset-inline-start: 0px; width: var(--start-position);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_5m_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 50%;"
        >
          <input
            aria-label="Volume"
            aria-orientation="horizontal"
            aria-valuenow="50"
            id="base-ui-_r_5o_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="50"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`slider [snapshot] > with message 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    aria-describedby="_r_5p_"
    class="vesper-range"
    data-orientation="horizontal"
    id="base-ui-_r_5q_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 50%; inset-inline-start: 0px; width: var(--start-position);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_5r_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 50%;"
        >
          <input
            aria-label="Volume"
            aria-orientation="horizontal"
            aria-valuenow="50"
            id="base-ui-_r_5t_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="50"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="true"
    id="_r_5p_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M18.1582 3L21 5.8418V18.1582L18.1582 21H5.8418L3 18.1582V5.8418L5.8418 3H18.1582ZM11.4941 9.97461L10.9873 10.4814V16.5566L11.4941 17.0625H12.5059L13.0127 16.5566V10.4814L12.5059 9.97461H11.4941ZM11.4941 6.9375L10.9873 7.44336V8.45605L11.4941 8.96289H12.5059L13.0127 8.45605V7.44336L12.5059 6.9375H11.4941Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`slider [snapshot] > with ticks 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-range"
    data-orientation="horizontal"
    id="base-ui-_r_56_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <span
          class="vesper-range-tick"
          style="--vesper-range-tick-position: 0.2;"
        />
        <span
          class="vesper-range-tick"
          style="--vesper-range-tick-position: 0.4;"
        />
        <span
          class="vesper-range-tick"
          style="--vesper-range-tick-position: 0.6;"
        />
        <span
          class="vesper-range-tick"
          style="--vesper-range-tick-position: 0.8;"
        />
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 40.386473429951685%; inset-inline-start: 0px; width: var(--start-position);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_57_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 40.386473429951685%;"
        >
          <input
            aria-label="Volume"
            aria-orientation="horizontal"
            aria-valuenow="2"
            id="base-ui-_r_59_"
            max="5"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="2"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`slider [snapshot] > with value label 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-range vesper-range-labeled"
    data-orientation="horizontal"
    id="base-ui-_r_5b_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 74.03381642512076%; inset-inline-start: 0px; width: var(--start-position);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_5c_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 74.03381642512076%; --vesper-range-thumb-label: "75%";"
        >
          <input
            aria-label="Volume"
            aria-orientation="horizontal"
            aria-valuenow="75"
            id="base-ui-_r_5e_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="75"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;
